# rust-obshtml-example-module

./: Cargo.toml  README.md
obsidianhtml_rust_module_example/: module.py
obsidianhtml_rust_module_example/src/: hello
src/: frontmatter.rs  main.rs  main_example.rs  metadata.rs
